--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        This is text!
+    <div class="header-content">
+        <div class="header">
+            Header Logo
+        </div>
+        <div class="header-links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-body">
+        <div class="big-text">
+            Big Text
+        </div>
+        <div class="small-text">
+            smaller descriptive text
+        </div>
+        <button>This is a button</button>
     </div>
 </body>
 </html>
